--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ pyarrow = "^15.0.0"
 apache-airflow-providers-postgres = "^5.10.1"
 
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
